zendesk: updated logo, font, and spacing issues

--- a/zendesk/style.css
+++ b/zendesk/style.css
@@ -676,6 +676,7 @@ main, .header-inner {
   border-radius: 5px;
   background-color: #ffc933;
   box-shadow: 0 4px 0 0 #d19e12;
+  font-family: 'Dosis', sans-serif;
   font-size: 24px;
   font-weight: bold;
   color: #fff;
@@ -697,11 +698,13 @@ main, .header-inner {
 .email-text {
   padding: 15px 0 0;
   text-align: center;
-  font-size: 20px;
+  font-family: 'Dosis', sans-serif;
+  font-size: 24px;
   font-weight: 600;
   color: #000;
 }
 .header-box a {
+  font-family: 'Dosis', sans-serif;
   font-size: 14px;
   font-weight: 500;
   color: #034698;
@@ -1131,8 +1134,8 @@ main, .header-inner {
    ==================================================== */
 .sub-nav {
   display: table;
-  margin-bottom: 25px;
-  padding: 25px 0;
+  margin-bottom: 0;
+  padding: 0;
   table-layout: fixed;
   width: 100%;
   border-bottom: 0;
